# gb_attention

./: .travis.yml  CMakeLists.txt  README.md  package.xml
gb_attention/: CMakeLists.txt  README.md  package.xml
gb_attention/include/gb_attention/: AttentionClient.h  AttentionOctomapClient.h  AttentionOctomapServer.h  AttentionServer.h  OptimizedAttentionServer.h  OptimizedOctomapAttentionServer.h  RoundRobinAttentionServer.h  RoundRobinOctomapAttentionServer.h  SimpleAttentionServer.h  SimpleOctomapAttentionServer.h
gb_attention/include/gb_attention/stimuli/: TableAttentionClient.h
gb_attention/launch/: attention.launch  test_octomap_table.launch  test_table.launch
gb_attention/src/: attention_client_node.cpp  attention_node.cpp  attention_octomap_client_node.cpp  attention_server_node.cpp  attention_server_octomap_node.cpp  head_test_simple_node.cpp
gb_attention/src/gb_attention/: AttentionClient.cpp  AttentionOctomapClient.cpp  AttentionOctomapServer.cpp  AttentionServer.cpp  OptimizedAttentionServer.cpp  OptimizedOctomapAttentionServer.cpp  RoundRobinAttentionServer.cpp  RoundRobinOctomapAttentionServer.cpp  SimpleAttentionServer.cpp  SimpleOctomapAttentionServer.cpp
gb_attention/src/gb_attention/stimuli/: TableAttentionClient.cpp
gb_attention/src/stimuli/: table_attention_client_node.cpp
gb_attention/tests/: test_attention.cpp  test_attention_node.cpp
gb_attention_msgs/: CMakeLists.txt  package.xml
gb_attention_msgs/msg/: AttentionPoints.msg  OctomapPoints.msg
gb_attention_msgs/srv/: RemoveAttentionStimuli.srv
include/gb_attention/: Attention.h  Class.h
src/: attention_node.cpp  nodo_sub_obj.cpp
src/gb_attention/: Attention.cpp  Class.cpp
tests/: test_class.cpp
