<?xml version="1.0"?>
<package>
  <name>gb_attention</name>
  <version>0.0.1</version>
  <description>Paquete de introducción de csuro (Curso Superior Universitario de Programación de Robots con ROS)</description>

  <maintainer email="fmrico@gmail.com">paco</maintainer>
  <license>GPLv3</license>
  <url type="website">http://www.urjc.es/estudios/titulos-propios/1701-curso-superior-universitario-en-programacion-de-robots-con-ros</url>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gb_attention_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>bica_graph</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gb_attention_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>bica_graph</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
  </export>
</package>
